# themis

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  THEMIS_README_v2.md  THEMIS_finetuning_journey.md  TRAINING_GUIDE.md  cli.py  config.py  infer.py  pyproject.toml  themis.cmd
context/: architecture.md  data-pipeline.md  progress-tracker.md  roadmap.md  security-audit.md  tech-stack.md
data/: preprocess.py
data/scraper/: indiacode.py  kanoon.py
data/synthetic/: generate.py
eval/: metrics.py  run_eval.py
notebooks/: MODEL_CARD.md  THEMIS_v2_Training.ipynb  themis_inference.ipynb
tests/: test_infer.py
themis/: __init__.py  cli.py  config.py  infer.py
themis/data/: __init__.py  dataset.json  preprocess.py
themis/data/scraper/: __init__.py  indiacode.py  kanoon.py
themis/data/scraper/raw/: the_bharatiya_nagarik_suraksha_sanhita_2023.json  the_bharatiya_nyaya_sanhita_2023.json  the_bharatiya_sakshya_adhiniyam_2023.json  the_consumer_protection_act_2019.json  the_industrial_disputes_banking_and_insurance_companies_act_1949.json  the_repealing_and_amending_act_2016.json  the_right_to_information_act_2005.json  the_terrorist_affected_areas_special_courts_act_1984.json
themis/data/synthetic/: __init__.py  generate.py  generate_v2.py  generate_v3.py  synthetic_qa.json  synthetic_qa_v2.json
themis/eval/: __init__.py  eval_set.json  metrics.py  run_eval.py
themis/tests/: __init__.py  test_infer.py
themis/training/: __init__.py  config.yaml  finetune.py  push_to_hub.py
training/: finetune.py  push_to_hub.py
