[project]
name = "themis-law"
version = "1.0.0"
description = "The Parametric Legal Intelligence Engine for Indian Law"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Daniel Deshmukh", email = "deshmukhdaniel2005@gmail.com"},
]
keywords = ["indian-law", "legal-ai", "bns", "ipc", "bnss", "fine-tuning", "lora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "torch>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
training = [
    "unsloth",
    "rouge-score",
    "datasets",
    "trl",
]
scraper = [
    "pymupdf>=1.23.0",
]
synthetic = [
    "groq>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
themis = "themis.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["themis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
